<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_assignment_ind_24"
        />
    <item
        android:title="@string/share_bottom"
        android:icon="@android:drawable/ic_menu_share"
        android:id="@+id/shareProfile"
        />
    <item
        android:title="@string/recycle_bin"
        android:icon="@drawable/ic_baseline_delete"
        android:id="@+id/recycleBin"
        />
    <item
        app:actionViewClass="android.widget.SearchView"
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        />
</menu>