<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/your_profile"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/image"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstName"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:hint="@string/first_name"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLastName"
        android:layout_marginTop="25dp"
        android:hint="@string/last_name"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textSize="25sp"
        android:textStyle="bold"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:layout_marginTop="25dp"
        android:hint="@string/email"
        android:textSize="25sp"
        android:textColor="#000"
        android:textColorHint="#000"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/take_picture"
        android:textStyle="italic"
        android:background="@drawable/my_button_background"
        />
        <Button
            android:id="@+id/btnTakePictureFromGallery"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:text="@string/take_picture_from_gallery"
            android:textStyle="italic"
            android:background="@drawable/my_button_background"
            />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:text="@string/save"
        android:textStyle="italic"
        android:background="@drawable/my_button_background"
        />



    </LinearLayout>
    </ScrollView>
</LinearLayout>